--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "jest",
     "build": "ts-node src/index.tsx",
-    "start": "nodemon"
+    "start": "nodemon & ./scripts/dev-server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@types/rimraf": "^2.0.2",
