--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "react-dom": "^16.8.4",
     "serve-static": "^1.13.2",
     "tslint": "^5.14.0",
-    "typescript": "^3.4.2",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "typescript": "^3.4.2"
   },
   "dependencies": {
     "@emotion/core": "^10.0.9",
