--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
     "@types/rimraf": "^2.0.2",
     "express": "^4.16.4",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "nodemon": "^1.18.10",
     "serve-static": "^1.13.2",
-    "tslint": "^5.14.0",
-    "typescript": "^3.4.2"
+    "tslint": "^5.14.0"
   },
   "dependencies": {
     "@emotion/core": "^10.0.9",
+    "dotenv": "^7.0.0",
     "emotion": "^10.0.9",
     "emotion-server": "^10.0.9",
-    "nodemon": "^1.18.10",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
-    "ts-node": "^8.0.3"
+    "ts-node": "^8.0.3",
+    "typescript": "^3.4.2"
   }
 }
