--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+      "baseUrl": ".",
+      "paths": { "*": ["types/*"] },
       "alwaysStrict": true,
       "allowJs": true,
       "jsx": "react",
